<resources>
    <string name="language_selection">Language selection</string>
    <string name="lang_select_help">Tap on language pair in list to select it. Tap button above to add new pair. Swipe right to remove pair.</string>
    <string name="arrow">arrow</string>
    <string name="add_language">Add language</string>
    <string name="audio_language">Audio language</string>
    <string name="translation_language">Translation language</string>
    <string name="add_language_pair">Add new language pair</string>
    <string name="err_lang_must_not_equal">Audio language must not be equal to translation language</string>
    <string name="err_select_source_lang">Select Audio language</string>
    <string name="err_select_dest_lang">Select Translation language</string>
</resources>